www/docs/es/3.1.0/config_ref/images.md
---
license: >
    Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.

title: Los iconos y las pantallas Splash
---

# Los iconos y las pantallas Splash

Esta sección le muestra cómo configurar de una aplicación icono y pantalla opcional para varias plataformas, tanto cuando se trabaja en la CLI de Cordova (descrito en la interfaz de línea de comandos) o herramientas específicas de la plataforma SDK (detallada en las guías de plataforma).

## Configuración de los iconos en el CLI

Cuando se trabaja en la CLI, archivos de código fuente del icono se encuentran en diferentes subdirectorios específicos a una plataforma dentro del proyecto `www/res/icons` Directorio. Recién creados proyectos cuentan con un conjunto de iconos de Córdoba para reemplazar para las plataformas de destino predeterminado.

Android especifica iconos de baja, media, alta y extra alta resolución:

        android/icon-36-ldpi.png
        android/icon-48-mdpi.png
        android/icon-72-hdpi.png
        android/icon-96-xhdpi.png
    

La plataforma iOS especifica 72-pixel-cuadrado iconos para iPads y muestra iconos 57-pixel para iPhones y iPods, con variantes de alta resolución *2 x* para la retina:

        ios/icon-57-2x.png
        ios/icon-57.png
        ios/icon-72-2x.png
        ios/icon-72.png
    

Windows Phone especifica un icono predeterminado 48 píxeles, junto con fondo de diversos dispositivos imágenes utilizadas al representar aplicaciones de revestimientos:

        windows-phone/icon-48.png
        windows-phone/icon-62-tile.png
        windows-phone/icon-173-tile.png
    

Blackberry requiere un icono de 80 píxeles:

        blackberry/icon-80.png
    

Tizen requiere un icono 128 píxeles:

        tizen/icon-128.png
    

## Configuración de pantallas de Splash en el CLI

Utilizar la API Splashscreen para activar la visualización de la pantalla de presentación introductoria de una app en muchas plataformas. Cuando se trabaja en la CLI, archivos de código fuente de pantalla splash se encuentran dentro del proyecto `www/res/screens` subdirectorio.

Android especifica ambas imágenes de pantalla splash retrato y paisaje-orientada de baja, media, alta y extra alta resolución:

        android/screen-hdpi-landscape.png
        android/screen-hdpi-portrait.png
        android/screen-ldpi-landscape.png
        android/screen-ldpi-portrait.png
        android/screen-mdpi-landscape.png
        android/screen-mdpi-portrait.png
        android/screen-xhdpi-landscape.png
        android/screen-xhdpi-portrait.png
    

La plataforma iOS especifica las variantes para iPhone/iPod y iPad, con variantes para las exhibiciones de la retina y orientaciones diferentes. El archivo *568 h* está personalizado para el iPhone de 5 pantalla más alta:

        ios/screen-ipad-landscape-2x.png
        ios/screen-ipad-landscape.png
        ios/screen-ipad-portrait-2x.png
        ios/screen-ipad-portrait.png
        ios/screen-iphone-landscape-2x.png
        ios/screen-iphone-landscape.png
        ios/screen-iphone-portrait-2x.png
        ios/screen-iphone-portrait.png
        ios/screen-iphone-portrait-568h-2x.png
    

BlackBerry y Windows Phone especifican una imagen de pantalla splash solo:

        blackberry/screen-225.png
        windows-phone/screen-portrait.jpg
    

Las siguientes secciones detallan cómo configurar salpicadura pantallas cuando trabajo con SDK y las herramientas de línea de comandos relacionados con descrito en las guías de la plataforma.

## Salpicadura pantallas para la plataforma Android

Coloque los archivos de [imagen 9-parche][1] en del proyecto Android `res/drawable` Directorio. El tamaño de cada uno debe ser:

 [1]: https://developer.android.com/tools/help/draw9patch.html

*   Xlarge (xhdpi): al menos 960 × 720
*   grande (IPAP): al menos 640 × 480
*   medio (mdpi): al menos 470 × 320
*   pequeño (ldpi): por lo menos 426 × 320

En `config.xml` , agregue las siguientes preferencias:

    <preference name="splashscreen", "splash" />
    <preference name="splashScreenDelay", 10000 />
    

La primera línea establece la imagen que se mostrará como la pantalla de bienvenida. Si nombre su imagen nada aparte de `splash.png` , tienes que modificar esta línea.

La segunda línea establece la demora de tiempo aparece el splashscreen en milisegundos. Para despedir la pantalla de inicio una vez que la aplicación recibe el `[deviceready](../cordova/events/events.deviceready.html)` evento, llamada el `navigator.splashscreen.hide()` método.

## Salpicadura pantallas para la plataforma iOS

Copiar tus imágenes en pantalla splash en el proyecto iOS `Resources/splash` Directorio. Sólo agregar las imágenes de los dispositivos que desea apoyar, como el iPad o el iPhone. El tamaño de cada imagen debe ser:

*   Default-568h@2x~iphone.png (640x1136 pixels)
*   Default-Landscape@2x~ipad.png (1496 x 2048 píxeles)
*   Default-Landscape~ipad.png (1024x748 pixels)
*   Default-Portrait@2x~ipad.png (1536x2008 pixels)
*   Default-Portrait~ipad.png (768x1004 pixels)
*   Default@2x~iphone.png (640x960 pixels)
*   Default~iphone.png (320x480 pixels)

## Salpicadura pantallas para la plataforma BlackBerry 10

Copiar tus imágenes en pantalla splash en el proyecto `res/screen/blackberry10` Directorio. Los nombres de archivo deben ser:

*   splash-1280x768.png (1280x768 pixels)
*   splash-720x720.png (720x720 pixels)
*   splash-768x1280.png (768x1280 pixels)